update rspec test for relationship.(DHH-425)

--- a/app/views/shared/fields/_relationships.html.erb
+++ b/app/views/shared/fields/_relationships.html.erb
@@ -20,7 +20,7 @@
 				concat temp.html_safe
 				value.each do |name|
 %>
-          <li><%= link_to "<i class='icon-tag icon-white'></i> #{name}".html_safe, facet_uri(topic, 'creator_sim'), :class => "label" %></li>
+          <li><%= link_to "<i class='icon-tag icon-white'></i> #{name}".html_safe, facet_uri(name, 'creator_sim'), :class => "label" %></li>
 					
 <%
 				end
