Fixing audit routing spec, adding download action to file controller and download buttons to all files (for admin only)
Conflicts:
	app/views/dams_objects/_simple_object_viewer.html.erb

--- a/app/views/dams_objects/_image_viewer.html.erb
+++ b/app/views/dams_objects/_image_viewer.html.erb
@@ -16,3 +16,4 @@
 		<%= link_to image_tag(filePath, :alt => ''), zoomFilePath %>
 	<% end %>
 <% end %>
+<%= render :partial => 'admin_download', :locals => {:downloadFilePath => downloadFilePath } %>
