--- a/app/views/dams_objects/_complex_object_viewer.html.erb
+++ b/app/views/dams_objects/_complex_object_viewer.html.erb
@@ -14,6 +14,17 @@
 		service_file_path = (service_file != nil) ? file_path(ark, "_#{i}_#{service_file}") : ''
 		fileType = grabFileType(fileUse)
 		loadFirstComponent = (firstComponent != nil) ? "data=#{i}" : ''
+
+        source_file = grabSourceFile
+        if source_file != nil
+          download_file_path = download_path(ark,"_#{source_file}")
+        elsif service_file != nil
+          download_file_path = download_path(ark,"_#{service_file}")
+        elsif display_file != nil
+          download_file_path = download_path(ark,"_#{display_file}")
+        else
+          download_file_path = ''
+        end
 	%>
 
 	<div id="component-<%= i %>" class="component <%= firstComponent %>" <%= loadFirstComponent %>>
@@ -24,19 +35,20 @@
 
 	    <%
 	       zoom_file_path = zoom_path(ark, "#{i}")
-	       dataForDynamicLoad = "{\"file_type\":\"image\",\"display_file_path\":\"#{display_file_path}\",\"service_file_path\":\"#{zoom_file_path}\"}"
+	       dataForDynamicLoad = "{\"file_type\":\"image\",\"display_file_path\":\"#{display_file_path}\",\"service_file_path\":\"#{zoom_file_path}\",\"download_file_path\":\"#{download_file_path}\"}"
 	    %>
 			<div data='<%=dataForDynamicLoad%>'></div>
+        <%= render :partial => 'admin_download', :locals => {:downloadFilePath => download_file_path } %>
 	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i} %>
 
 	  <% elsif fileType == 'audio' %>
 
-	    <%= render :partial => 'audio_viewer_complex', :locals => {:componentIndex => i} %>
+	    <%= render :partial => 'audio_viewer_complex', :locals => {:componentIndex => i, :downloadFilePath => download_file_path} %>
 	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i} %>
 
 	  <% elsif fileType == 'video' %>
 
-	    <%= render :partial => 'video_viewer_complex', :locals => {:componentIndex => i} %>
+	    <%= render :partial => 'video_viewer_complex', :locals => {:componentIndex => i, :downloadFilePath => download_file_path} %>
 	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i} %>
 
 	  <% elsif fileType == 'document' %>
