--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -17,17 +17,25 @@
 <%= render :partial => 'shared/fields/note', :locals => {:exclude_type => notesToExclude, :exclude_label => ['Digital object made available by'] } %>
 <%= render :partial => 'shared/fields/resource_type' %>
 <%= render :partial => 'shared/fields/language' %>
-<%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'ARK'} %>
-<%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'ARK ID'} %>
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'existence and location of originals'} %>
-<%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'negative'} %>
+<%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :exclude_label => ['ARK', 'ARK ID',
+                                                          'collection number', 'call number', 'filename', 'local',
+                                                          'negative', 'OCLC number', 'roger record', 'sequence']} %>
+
+<!-- bd22194583: has sample number for testing -->
+<!-- why isn't ARK showing up??? -->
 
 <% if can? :update, @document %>
-  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :exclude_label => ['ARK','ARK ID','negative','filename','local','roger','oclc']} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'ARK'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'ARK ID'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'call number'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'collection number'} %>
   <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'filename'} %>
   <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'local'} %>
-  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'roger'} %>
-  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'oclc'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'negative'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'OCLC number'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'roger record'} %>
+  <%= render :partial => 'shared/fields/note', :locals => {:type => 'identifier', :label => 'sequence'} %>
 <% end %>
 
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'general physical description'} %>
