--- a/app/views/dams_objects/_complex_object_viewer.html.erb
+++ b/app/views/dams_objects/_complex_object_viewer.html.erb
@@ -11,7 +11,7 @@
 		display_file = grabDisplayFile(:componentIndex=>i)
 		service_file = grabServiceFile(:componentIndex=>i)
 		display_file_path = (display_file != 'no_display') ? file_path(ark,"_#{i}_#{display_file}") : ''
-		service_file_path = (service_file != nil) ? file_path(ark, "_#{i}_#{service_file}") : ''
+		service_file_path = (service_file != nil) ? download_path(ark, "_#{i}_#{service_file}") : ''
 		fileType = grabFileType(fileUse)
 		loadFirstComponent = (firstComponent != nil) ? "data=#{i}" : ''
 
