--- a/app/views/dams_objects/_object_viewer.html.erb
+++ b/app/views/dams_objects/_object_viewer.html.erb
@@ -17,7 +17,7 @@
 					source_file = grabSourceFile
 					pdf_file = grabPDFFile
 					display_file_path = (display_file != 'no_display') ? file_path(ark,"_#{display_file}") : ''
-					service_file_path = (service_file != nil) ? file_path(ark,"_#{service_file}") : ''
+					service_file_path = (service_file != nil) ? download_path(ark,"_#{service_file}") : ''
                     if source_file != nil
 					  download_file_path = download_path(ark,"_#{source_file}")
                     elsif service_file != nil
@@ -27,7 +27,7 @@
                     else
                       download_file_path = ''
                     end
-					pdf_file_path = (pdf_file != nil) ? file_path(ark, "_#{pdf_file}") : ''
+					pdf_file_path = (pdf_file != nil) ? download_path(ark, "_#{pdf_file}") : ''
 					zoom_file_path = zoom_path @document['id'], '0'
 				%>
 				<%= render :partial => 'simple_object_viewer',
