--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -20,7 +20,7 @@
 
 	<%= render :partial => 'layouts/header', :locals => {:hideSearch=>true} %>
 
-	<section id="messages" class="container-fluid">
+	<section id="messages" class="row-fluid">
 		<%= render :partial=>'/flash_msg' %>
 	</section>
 
