--- a/app/assets/stylesheets/custom-collections.css.scss
+++ b/app/assets/stylesheets/custom-collections.css.scss
@@ -9,11 +9,17 @@
 .dams-collections dd{text-align: justify;margin-left:0;}
 
 .dams-collections a{word-break: break-all;}
-.dams-collections h3{margin: 0 0 10px 0;line-height: normal;color:#444;font-weight:normal;}
 
 .dams-collections .input-append{text-align:center;display:block;}
 .dams-collections .input-append input[type=text]{width:70% !important;}
 .dams-collections .sidebar-button-list{margin:0;}
+
+.dams-collections
+{
+  h1{font-size:2em;line-height:normal;margin-top:0;}
+  h2{font-size:1.75em;line-height:normal;margin-top:0;color:#444;}
+  h3{margin-bottom:10px;line-height:normal;color:#444;font-weight:normal;}
+}
 
 .item-block {margin:0;padding:0;line-height:normal;}
 .item-block li {list-style-type:none;margin:0;overflow:auto;padding:0;margin-bottom:5px;}
@@ -26,7 +32,7 @@
 
 .collections-search-box
 {
-   margin-top:1em;
+  margin-top:20px;
   .input-append, form{margin-bottom:0;}
 }
 
@@ -40,13 +46,27 @@
   position:relative;
   .bug{position: absolute;bottom:0; right:0;margin:0 5px 5px 0; color:rgba(0,0,0,0.33)}
 
-  hgroup{  border-bottom: 3px solid rgba(0,0,0,0.33);  padding:20px;  height: 240px;
-
-  }
+  hgroup{border-bottom: 3px solid rgba(0,0,0,0.33);  padding:20px; }
 
   h1, h2{line-height:normal;margin:0;padding-bottom:0;text-shadow: 0px 0px 3px rgba(0,0,0,0.5);color:#fff;font-weight: normal;}
   h2{color:rgba(255,255,255,0.75);}
 
+
+}
+
+#collections-image
+{
+  background-color: #888;
+  background-position:middle center;
+  background-size:cover;
+  margin-bottom: 20px;
+  border-radius: 5px 5px 0 0;
+  border-bottom: 3px solid rgba(0,0,0,0.33);
+
+  height:340px;
+  width:100%;
+  position:relative;
+  .bug{position: absolute;top:0; left:0;margin:5px 0 0 5px; color:rgba(0,0,0,0.33)}
 
 }
 
@@ -55,8 +75,8 @@
 /* LANDSCAPE PHONE TO PORTRAIT TABLET (BOOTSTRAP) */
 @media (max-width: 767px)
 {
-  #collections-masthead h1, #collections-masthead h2, .dams-collections h3, .dams-collections dt{font-size: 125%;}
+  #collections-masthead h1, #collections-masthead h2, .dams-collections h3{font-size: 125%;}
   .dams-collections dt{font-size: 110%;}
-  #collections-masthead hgroup{height:200px;}
+  #collections-masthead hgroup{}
 }
 
