--- a/app/views/dams_collections/show.html.erb
+++ b/app/views/dams_collections/show.html.erb
@@ -1,9 +1,9 @@
 <%
-	@collection_title = @document['title_tesim'].first
-	@collection_type = render_document_show_field_value(:document=>@document, :field =>'has_model_ssim')
-	@collection_type =  @collection_type.gsub("info:fedora/afmodel:", '').gsub(/(?<=[a-z])(?=[A-Z])/, '_').downcase
-	@edit = "edit_" + "#{@collection_type}_path"
-	@page_title = "#{@collection_title} (Collection)"
+   @collection_title = @document['title_tesim'].first
+   @collection_type = render_document_show_field_value(:document=>@document, :field =>'has_model_ssim')
+   @collection_type =  @collection_type.gsub("info:fedora/afmodel:", '').gsub(/(?<=[a-z])(?=[A-Z])/, '_').downcase
+   @edit = "edit_" + "#{@collection_type}_path"
+   @page_title = "#{@collection_title} | Collection"
 %>
 
 <!--
@@ -14,52 +14,46 @@
 </div>
 -->
 
-<div class="row-fluid">
+<div class="row-fluid visible-phone">
   <div id="collections-masthead" class="span12" style="background-image:url(http://libraries.ucsd.edu/assets/dams/home-page/img/<%=@document['id']%>.jpg),url(http://libraries.ucsd.edu/assets/dams/home-page/img/default.jpg)">
-      <%= render :partial => 'shared/fields/title' %>
-	  <div class="bug">Collection</div>
-	</div>
+    <%= render :partial => 'shared/fields/title' %>
+    <div class="bug">Collection</div>
+  </div>
 </div>
 
 <div class="row-fluid dams-collections">
 
   <div class="span4">
-
-    <%= link_to "<i class='icon-eye-open icon-white'></i> View Collection Items".html_safe, facet_uri(@collection_title,'collection_sim'), :class => 'btn btn-large btn-inverse btn-block' %>
-
-    <div class="well collections-search-box">
-      <%= render :partial => 'search' %>
+    <%# Collection image %>
+    <div id="collections-image" class="hidden-phone" style="background-image:url(http://libraries.ucsd.edu/assets/dams/home-page/img/<%=@document['id']%>.jpg),url(http://libraries.ucsd.edu/assets/dams/home-page/img/default.jpg)">
+      <div class="bug">Collection</div>
     </div>
-
-    <%# Editor menus %>
-    <% if can? :update, @document then %>
-
-      <p class="sidebar-header"><b>Collection Tools</b></p>
-      <ul class="unstyled sidebar-button-list">
-        <li><%= link_to "<i class='icon-plus-sign'></i> View RDF document".html_safe, normalized_rdf_path(@document['id']), class: 'btn btn-link' %>
-        <li><%= link_to "<i class='icon-plus-sign'></i> View Data".html_safe, data_view_dams_collections_path(@document['id']), class: 'btn btn-link' %>
-        <li><%= link_to "<i class='icon-plus-sign'></i> Edit collection".html_safe, send(@edit,@document['id']), class: "btn btn-link"%>
-      </ul>
+    <%# Collection controls %>
+    <% if @object_count > 0 %>
+      <%= link_to "<i class='icon-eye-open icon-white'></i> View Collection Items".html_safe, facet_uri(@collection_title,'collection_sim'), :class => 'btn btn-large btn-inverse btn-block' %>
+      <div class="well collections-search-box"><%= render :partial => 'search' %></div>
+    <% else %>
+      <p class="alert">There are no items in this collection to view or search for.</p>
     <% end %>
-
+    <%# Editor menus %>
+    <% if can? :update, @document %>
+      <%= render :partial => 'dams_collections/show_editor_tools' %>
+	  <% end %>
+    <%# DAMS tools %>
     <%= render :partial => 'show_damstools' %>
-
   </div>
 
-
-	<div class="span8">
-		<h3>About this collection</h3>
-		<dl>
-		  <%= render :partial => 'shared/fields/show_raw', :locals => {:greetingsFromCollectionsView => 'Wish you were here!'} %>
-		</dl>
-	</div>
-
+  <div class="span8">
+    <div class="hidden-phone"><%= render :partial => 'shared/fields/title' %></div>
+    <h3>About this collection</h3>
+    <dl><%= render :partial => 'shared/fields/show_raw', :locals => {:greetingsFromCollectionsView => 'Wish you were here!'} %></dl>
+  </div>
 
 </div>
 
 <div class="row-fluid">
-	<section class="dams-comments span8 offset4">
-		<%= render :partial => 'dams_objects/comments' %>
-	</section>
+  <section class="dams-comments span8 offset4">
+    <%= render :partial => 'dams_objects/comments' %>
+  </section>
 </div>
 
