--- a/app/views/dams_collections/show.html.erb
+++ b/app/views/dams_collections/show.html.erb
@@ -4,6 +4,7 @@
    @collection_type =  @collection_type.gsub("info:fedora/afmodel:", '').gsub(/(?<=[a-z])(?=[A-Z])/, '_').downcase
    @edit = "edit_" + "#{@collection_type}_path"
    @page_title = "#{@collection_title} | Collection"
+	 no_collection_items_notice = 'There are no items in this collection to view or search for.'
 %>
 
 <!--
@@ -14,27 +15,45 @@
 </div>
 -->
 
-<div class="row-fluid visible-phone">
+<%# Collections controls for phone layout %>
+<div class="row-fluid visible-phone dams-collections">
+  <%# Collection masthead %>
   <div id="collections-masthead" class="span12" style="background-image:url(http://libraries.ucsd.edu/assets/dams/home-page/img/<%=@document['id']%>.jpg),url(http://libraries.ucsd.edu/assets/dams/home-page/img/default.jpg)">
     <%= render :partial => 'shared/fields/title' %>
     <div class="bug">Collection</div>
   </div>
+  <%# Collection controls %>
+  <% if @object_count > 0 %>
+    <%= link_to "<i class='icon-eye-open icon-white'></i> View Collection Items".html_safe, facet_uri(@collection_title,'collection_sim'), :class => 'btn btn-large btn-inverse btn-block' %>
+    <div class="well collections-search-box"><%= render :partial => 'search' %></div>
+  <% else %>
+    <p class="alert alert-phone alert-no-dismiss"><%=no_collection_items_notice%></p>
+  <% end %>
 </div>
 
+<%# Main container %>
 <div class="row-fluid dams-collections">
-
+	<%# Corpus %>
+  <div class="span8">
+	  <p class="crumb hidden-phone"><b>Collections</b> &raquo;</p>
+    <div class="hidden-phone"><%= render :partial => 'shared/fields/title' %></div>
+    <h3>About this collection</h3>
+    <dl><%= render :partial => 'shared/fields/show_raw', :locals => {:greetingsFromCollectionsView => 'Wish you were here!'} %></dl>
+  </div>
+	<%# Sidebar %>
   <div class="span4">
-    <%# Collection image %>
-    <div id="collections-image" class="hidden-phone" style="background-image:url(http://libraries.ucsd.edu/assets/dams/home-page/img/<%=@document['id']%>.jpg),url(http://libraries.ucsd.edu/assets/dams/home-page/img/default.jpg)">
-      <div class="bug">Collection</div>
-    </div>
-    <%# Collection controls %>
-    <% if @object_count > 0 %>
-      <%= link_to "<i class='icon-eye-open icon-white'></i> View Collection Items".html_safe, facet_uri(@collection_title,'collection_sim'), :class => 'btn btn-large btn-inverse btn-block' %>
-      <div class="well collections-search-box"><%= render :partial => 'search' %></div>
-    <% else %>
-      <p class="alert">There are no items in this collection to view or search for.</p>
-    <% end %>
+	  <%# Collections controls for desktop layout %>
+    <div class="hidden-phone">
+	    <%# Collection image %>
+	    <div id="collections-image" class="hidden-phone" style="background-image:url(http://libraries.ucsd.edu/assets/dams/home-page/img/<%=@document['id']%>.jpg),url(http://libraries.ucsd.edu/assets/dams/home-page/img/default.jpg)"></div>
+	    <%# Collection controls %>
+	    <% if @object_count > 0 %>
+	      <%= link_to "<i class='icon-eye-open icon-white'></i> View Collection Items".html_safe, facet_uri(@collection_title,'collection_sim'), :class => 'btn btn-large btn-inverse btn-block' %>
+	      <div class="well collections-search-box"><%= render :partial => 'search' %></div>
+	    <% else %>
+	      <p class="alert alert-no-dismiss"><%=no_collection_items_notice%></p>
+	    <% end %>
+	  </div>
     <%# Editor menus %>
     <% if can? :update, @document %>
       <%= render :partial => 'dams_collections/show_editor_tools' %>
@@ -42,17 +61,11 @@
     <%# DAMS tools %>
     <%= render :partial => 'show_damstools' %>
   </div>
-
-  <div class="span8">
-    <div class="hidden-phone"><%= render :partial => 'shared/fields/title' %></div>
-    <h3>About this collection</h3>
-    <dl><%= render :partial => 'shared/fields/show_raw', :locals => {:greetingsFromCollectionsView => 'Wish you were here!'} %></dl>
-  </div>
-
 </div>
 
+<%# Comments container %>
 <div class="row-fluid">
-  <section class="dams-comments span8 offset4">
+  <section class="dams-comments span8">
     <%= render :partial => 'dams_objects/comments' %>
   </section>
 </div>
