--- a/app/views/catalog/collection_search.html.erb
+++ b/app/views/catalog/collection_search.html.erb
@@ -8,8 +8,8 @@
     Browse by Collection<%if !@current_unit.blank?%>: <%=@current_unit%><%end%>
     </h3>
 
-    <div class="alert alert-info">
-      Current collections are listed below.  Click on the image or link below to see the complete collection description.
+    <div class="alert alert-info alert-no-dismiss">
+      View current collections below. Click an image or link for a full description.
     </div>
 
     <%= render 'sort_and_per_page' %>
