Adding alternate 'search within results' form below facets (DHH-474)

--- a/app/views/layouts/_search_bar_alt.html.erb
+++ b/app/views/layouts/_search_bar_alt.html.erb
@@ -12,8 +12,8 @@
       </button>
       <% if params['f'] %>
         <div class="dams-search-within">
-          <input type="checkbox" checked="checked" name="x" value="<%= params['f'] %>"/>
-          <label for="x">Search within results</label>
+          <input type="checkbox" checked="checked" name="xf" value="<%= params['f'] %>"/>
+          <label for="xf">Search within results</label>
         </div>
       <% end %>
     </div>
