--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -88,7 +88,7 @@
   </section>
 
   <% unless defined?(hideSearch) %>
-    <%= render :partial => 'layouts/search_bar_alt' %>
+    <%= render :partial => 'layouts/search_bar' %>
 	<%end%>
 
 </header>
