Moving facet UI into search bar (DHH-474)

--- a/app/assets/stylesheets/custom-search.css.scss
+++ b/app/assets/stylesheets/custom-search.css.scss
@@ -33,6 +33,9 @@
 .appliedFilter{margin-bottom: 0;}
 .dams-search-instead{color:#444;font-size:90%;}
 
+.form-search-limits { margin: 8px; float: left; color: #666; }
+.form-search { float: right; margin: 2px; }
+
 .dams-search-results-footer
 {
   padding-top:20px;
