--- a/app/views/catalog/_constraints.html.erb
+++ b/app/views/catalog/_constraints.html.erb
@@ -1,12 +1,7 @@
 <% if query_has_constraints? %>
 	<div class="dams-search-constraints">
 
-		<span class="dams-search-constraints-label"><%= 'Showing results for' %></span>
-
-		<%#link_to t('blacklight.search.start_over'), url_for(:action=>'index'), :class => "catalog_startOverLink", :id=>"startOverLink" %>
-		<%#link_to "Advanced Search", advanced_path, :class => "pull-right hidden-phone" %>
-
-		<%= render_constraints(params) %>
+	<%-# actual constraints moved into layouts/_search_bar.html.erb -%>
 
 		<% if params['spellcheck.q'] != params['q'] %>
 			<span class="dams-search-instead"><em>Search instead for <%= link_to_query(params['spellcheck.q'])%></em></span>
