--- a/app/views/catalog/_constraints.html.erb
+++ b/app/views/catalog/_constraints.html.erb
@@ -1,13 +1,7 @@
 <% if query_has_constraints? %>
-	<div class="dams-search-constraints">
-
-	<%-# actual constraints moved into layouts/_search_bar.html.erb -%>
-
-		<% if params['spellcheck.q'] != params['q'] %>
-			<span class="dams-search-instead"><em>Search instead for <%= link_to_query(params['spellcheck.q'])%></em></span>
-		<% end %>
-
-		<%= render :partial => 'did_you_mean' %>
-
-	</div>
+  <div class="dams-search-constraints">
+    <span class="dams-search-constraints-label">Showing results for</span>
+    <%= render_constraints_query(params) %>
+    <%= render_constraints_filters(params) %>
+  </div>
 <% end %>
