--- a/app/views/layouts/_search_bar.html.erb
+++ b/app/views/layouts/_search_bar.html.erb
@@ -1,22 +1,13 @@
-
 <section class="container-fluid mobile-search-bar-alt clearfix">
-  <% if params['f'] %>
-    <div class="form-search-limits">
-      <span class="dams-search-constraints-label">Showing results for</span>
-      <%= render_constraints_filters(params) %>
-    </div>
-  <% end %>
-
-  <%= form_tag catalog_index_url, :method => :get, :class => 'form-search' do %>
-    <div class="input-append">
-      <% if params['f'] %>
-        <input type="hidden" name="xf" value="<%= params['f'] %>"/>
-      <% end %>
-      <label class="hide-text" for="q">Search Digital Collections</label>
-      <input type="text" placeholder="Search Digital Collections" name="q" id="q" class="search-query" value="<%= params['q'] %>">
-      <button class="btn btn-inverse" type="submit" id="mobile-search-button">
-        <i class="icon-search icon-white"></i>
-      </button>
-    </div>
+  <% if !query_has_constraints? %>
+    <%= form_tag catalog_index_url, :method => :get, :class => 'form-search' do %>
+      <div class="input-append">
+        <label class="hide-text" for="q">Search Digital Collections</label>
+        <input type="text" placeholder="Search Digital Collections" name="q" id="q" class="search-query" value="">
+        <button class="btn btn-inverse" type="submit" id="mobile-search-button">
+          <i class="icon-search icon-white"></i>
+        </button>
+      </div>
+    <% end %>
   <% end %>
 </section>
