--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -1,10 +1,10 @@
 <div class="row-fluid">
 
-	<div id="sidebar" class="span3">
+	<div id="sidebar00" class="span3">
 		<%= render :partial=>'facets' %>
 	</div>
 
-	<div id="content" class="span9">
+	<div id="content00" class="span9">
 
 		<% if @document_list.nil? || @document_list.size == 0 %>
 
