--- a/app/assets/stylesheets/custom-search.css.scss
+++ b/app/assets/stylesheets/custom-search.css.scss
@@ -148,7 +148,7 @@
 .mobile-search-bar-alt input[type=text]:focus{box-shadow: 0 0 0 rgba(0,0,0, 0) inset, 0 0 0 rgba(0, 0, 0, 0);}
 .mobile-search-bar-alt form{padding:4px 0;margin:0;}
 .btn-navsearch{padding:4px 12px 3px 12px !important;margin-right:10px !important;}
-.mobile-search-bar-alt{background-color: #eee;background-image: linear-gradient(to bottom, #efefef, #f6f6f6);margin-bottom: 20px;border-bottom: 1px solid #eee;}
+.mobile-search-bar-alt{background-color: #eee;background-image: linear-gradient(to bottom, #efefef, #f6f6f6);margin-bottom: 20px;border-bottom: 1px solid #eee;height:38px;}
 .mobile-search-bar-alt .input-append{width:100%;text-align: right;}
 
 //---
@@ -177,6 +177,7 @@
 /* MOBILE NAVBAR (CUSTOM) */
 @media (max-width: 979px) {
 
+  .mobile-search-bar-alt{height:auto;}
   .mobile-search-bar-alt .input-append{text-align: center;}
 
 }
