integrating bower with rails.(DHH-478)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
  *= require custom-search
  *= require custom-advanced-search
  *= require custom-edit
- 
+ *= require leaflet
  *= require typeahead.js-bootstrap
  
 
